# pyda

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
docs/source/: about_this_prototype.md  api.rst  async_client.rst  async_usage.rst  caveats.rst  conf.py  inca.rst  index.rst  rbac.rst  usage.rst
pyda/: __init__.py
pyda/clients/asyncio/: __init__.py  _asyncio.py
pyda/clients/callback/: __init__.py  _callback.py
pyda/clients/core/: __init__.py  _core.py
pyda/clients/simple/: __init__.py  _simple.py
pyda/data/: __init__.py  _data.py
pyda/providers/: __init__.py  _core.py  _middleware.py
pyda/tests/: conftest.py  test_asyncio_client.py  test_callback_client.py  test_data.py  test_pyda.py  test_simple_client.py
pyda/tests/clients/: test_AsyncIOClient.py  test_CallbackClient.py  test_SimpleClient.py
pyda/tests/data/: test_AcquiredPropertyData.py  test_Header.py  test_PropertyAccessResponse.py  test_PropertyUpdateResponse.py  test_Selector.py  test_UpdateHeader.py  test_dtv_from_dict.py
pyda/tests/integration/providers/: some_asyncio_provider.py  some_callback_provider.py  some_sync_provider.py  test_some_asyncio_provider.py  test_some_callback_provider.py  test_some_sync_provider.py
